docs/v1.10.1/ko/tools/search-research/exasearchtool.mdx
---
title: EXA 검색 웹 로더
description: EXASearchTool은 인터넷 전반에 걸쳐 텍스트의 내용에서 지정된 쿼리에 대한 시맨틱 검색을 수행하도록 설계되었습니다.
icon: globe-pointer
mode: "wide"
---

# `EXASearchTool`

## 설명

EXASearchTool은 텍스트의 내용을 기반으로 지정된 쿼리를 인터넷 전반에 걸쳐 의미론적으로 검색하도록 설계되었습니다.
사용자가 제공한 쿼리를 기반으로 가장 관련성 높은 검색 결과를 가져오고 표시하기 위해 [exa.ai](https://exa.ai/) API를 활용합니다.

## 설치

이 도구를 프로젝트에 포함하려면 아래 설치 지침을 따르세요:

```shell
pip install 'crewai[tools]'
```

## 예제

다음 예제는 도구를 초기화하고 주어진 쿼리로 검색을 실행하는 방법을 보여줍니다:

```python Code
from crewai_tools import EXASearchTool

# Initialize the tool for internet searching capabilities
tool = EXASearchTool()
```

## 시작 단계

EXASearchTool을 효과적으로 사용하려면 다음 단계를 따르세요:

<Steps>
    <Step title="패키지 설치">
        Python 환경에 `crewai[tools]` 패키지가 설치되어 있는지 확인하세요.
    </Step>
    <Step title="API 키 획득">
        [exa.ai](https://exa.ai/)에서 무료 계정을 등록하여 [exa.ai](https://exa.ai/) API 키를 획득하세요.
    </Step>
    <Step title="환경 설정">
        획득한 API 키를 도구에서 사용할 수 있도록 `EXA_API_KEY`라는 환경 변수에 저장하세요.
    </Step>
</Steps>

## 결론

`EXASearchTool`을 Python 프로젝트에 통합함으로써, 사용자는 애플리케이션 내에서 실시간으로 인터넷을 직접 검색할 수 있는 능력을 얻게 됩니다.
제공된 설정 및 사용 지침을 따르면, 이 도구를 프로젝트에 포함하는 과정이 간편하고 직관적입니다.
