docs/v1.15.38/ko/tools/search-research/exasearchtool.mdx
---
title: EXA 검색 웹 로더
description: ExaSearchTool은 인터넷 전반에 걸쳐 텍스트의 내용에서 지정된 쿼리에 대한 시맨틱 검색을 수행하도록 설계되었습니다.
icon: globe-pointer
mode: "wide"
---

# `ExaSearchTool`

## 설명

ExaSearchTool은 텍스트의 내용을 기반으로 지정된 쿼리를 인터넷 전반에 걸쳐 의미론적으로 검색하도록 설계되었습니다.
사용자가 제공한 쿼리를 기반으로 가장 관련성 높은 검색 결과를 가져오고 표시하기 위해 [exa.ai](https://exa.ai/) API를 활용합니다.

## 설치

이 도구를 프로젝트에 포함하려면 아래 설치 지침을 따르세요:

```shell
pip install 'crewai[tools]'
```

## 예제

다음 예제는 도구를 초기화하고 주어진 쿼리로 검색을 실행하는 방법을 보여줍니다:

```python Code
from crewai_tools import ExaSearchTool

# Initialize the tool for internet searching capabilities
tool = ExaSearchTool()
```

## 시작 단계

ExaSearchTool을 효과적으로 사용하려면 다음 단계를 따르세요:

<Steps>
    <Step title="패키지 설치">
        Python 환경에 `crewai[tools]` 패키지가 설치되어 있는지 확인하세요.
    </Step>
    <Step title="API 키 획득">
        [exa.ai](https://exa.ai/)에서 무료 계정을 등록하여 [exa.ai](https://exa.ai/) API 키를 획득하세요.
    </Step>
    <Step title="환경 설정">
        획득한 API 키를 도구에서 사용할 수 있도록 `EXA_API_KEY`라는 환경 변수에 저장하세요.
    </Step>
</Steps>

## MCP를 통한 Exa 사용

Exa가 호스팅하는 MCP 서버에 에이전트를 연결할 수도 있습니다. API 키는 `x-api-key` 헤더로 전달하세요:

```python
from crewai import Agent
from crewai.mcp import MCPServerHTTP

agent = Agent(
    role="Research Analyst",
    goal="Find and analyze information on the web",
    backstory="Expert researcher with access to Exa's tools",
    mcps=[
        MCPServerHTTP(
            url="https://mcp.exa.ai/mcp",
            headers={"x-api-key": "YOUR_EXA_API_KEY"},
        ),
    ],
)
```

API 키는 [Exa 대시보드](https://dashboard.exa.ai/api-keys)에서 발급받을 수 있습니다. CrewAI에서의 MCP 사용에 대한 자세한 내용은 [MCP 개요](/ko/mcp/overview)를 참고하세요.

## 결론

`ExaSearchTool`을 Python 프로젝트에 통합함으로써, 사용자는 애플리케이션 내에서 실시간으로 인터넷을 직접 검색할 수 있는 능력을 얻게 됩니다.
제공된 설정 및 사용 지침을 따르면, 이 도구를 프로젝트에 포함하는 과정이 간편하고 직관적입니다.

## 참고 자료

- [Exa 공식 문서](https://exa.ai/docs)
- [Exa 대시보드 — API 키 및 사용량 관리](https://dashboard.exa.ai)
